--- a/_includes/markdown-link-refs.html
+++ b/_includes/markdown-link-refs.html
@@ -1,15 +1,17 @@
+[d]: /guides/data/
+[d-main]: /data/
 [dp]: /guides/data-package/
 [dp-main]: /data-packages/
 [tdp]: /guides/tabular-data-package/
 [jts]: /guides/json-table-schema/
-[jts-types]: http://specs.frictionlessdata.io/json-table-schema/#field-types-and-formats
+[jts-types]: http://specs.dataatwork.org/json-table-schema/#field-types-and-formats
 [csv]: /guides/csv/
 [json]: http://en.wikipedia.org/wiki/JSON
 
-[spec-dp]: http://specs.frictionlessdata.io/data-packages/
-[spec-tdp]: http://specs.frictionlessdata.io/tabular-data-package/
-[spec-jts]: http://specs.frictionlessdata.io/json-table-schema/
-[spec-csvddf]: http://specs.frictionlessdata.io/csv-dialect/
+[spec-dp]: http://specs.dataatwork.org/data-packages/
+[spec-tdp]: http://specs.dataatwork.org/tabular-data-package/
+[spec-jts]: http://specs.dataatwork.org/json-table-schema/
+[spec-csvddf]: http://specs.dataatwork.org/csv-dialect/
 
 [publish]: /guides/publish/
 [pub-tabular]: /guides/publish/tabular/
