--- a/_layouts/case_study.html
+++ b/_layouts/case_study.html
@@ -28,10 +28,9 @@ wide: true
 
     <p>
       We’re curious to learn about some of the common issues users
-      face when working with data. In our Case Study series, we are
+      face when working with our skills and jobs data. In our Case Study series, we are
       highlighting projects and organisations who are working with the
-      Frictionless Data specifications and tooling in interesting and
-      innovative ways.
+      Data@Work data and tooling in interesting and innovative ways.
     </p>
 
     
