Update text throughout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -61,7 +61,7 @@
     </li>
     
     <li>
-      <a href="http://specs.dataatwork.org/">
+      <a href="https://api.dataatwork.org/v1/spec/">
         Specifications
       </a>
     </li>
