--- a/_layouts/case_study.html
+++ b/_layouts/case_study.html
@@ -30,7 +30,7 @@ wide: true
       We’re curious to learn about some of the common issues users
       face when working with our skills and jobs data. In our Case Study series, we are
       highlighting projects and organisations who are working with the
-      Data@Work data and tooling in interesting and innovative ways.
+      Data at Work data and tooling in interesting and innovative ways.
     </p>
 
     
