Add link to upcoming webinar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
 <header class="site-header">
   <a href="#menu" class="show-menu"><span class="text">Open the menu</span></a>
   <a class="site-title" href="{{ site.baseurl }}/">{{ site.short_title }}</a>
+  <a class="upcoming-thing" href="{{ site.upcoming_thing_url }}">{{ site.upcoming_thing }}</a>
 </header>
 
 <nav id="menu">
