--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,10 +36,6 @@
       <a href="{{ site.baseurl }}/roadmap/">Roadmap</a>
     </li>
     
-    <li {% if url_last ==  'guides' %}class="Selected"{% endif %}>
-      <a href="{{ site.baseurl }}/guides/">Guides</a>
-    </li>
-
     <li {% if url_last ==  'get-involved' %}class="Selected"{% endif %}>
       <a href="{{ site.baseurl }}/get-involved/">Get Involved</a>
     </li>
@@ -56,12 +52,8 @@
       <a href="{{ site.baseurl }}/case-studies/">Case Studies</a>
     </li>
     
-    <li {% if url_last ==  'blog' %}class="Selected"{% endif %}>
-      <a href="http://okfnlabs.org/blog/">Blog</a>
-    </li>
-    
     <li>
-      <a href="https://api.dataatwork.org/v1/spec/">
+      <a href="http://api.dataatwork.org/v1/spec/">
         Specifications
       </a>
     </li>
