--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div>
     <div class="primary">
-      <a href="https://okfn.org/" rel="external"><img src="{{ "/img/uchicago_logo_grey.jpg" | prepend: site.baseurl }}" width="123" height="32" alt="Open Knowledge"></a>
+      <a href="https://uchicago.edu/" rel="external"><img src="{{ "/img/uchicago_logo_grey.jpg" | prepend: site.baseurl }}" width="123" height="32" alt="Open Knowledge"></a>
       
       {% if site.supporters %}
       <div class="supporters">
@@ -14,15 +14,6 @@
         {% endfor %}
       </div>
       {% endif %}
-    </div>
-    
-    <div class="secondary">
-      <ul>
-        <li><a href="/get-involved/#newsletter">Newsletter</a></li>
-        <li><a href="https://okfn.org/terms-of-use/" rel="external">Terms of use</a></li>
-        <li><a href="https://okfn.org/privacy-policy/" rel="external">Privacy policy</a></li>
-        <li class="button"><a href="http://opendefinition.org/" rel="external"><img src="{{ site.baseurl }}/img/open-content.svg" width="80" height="15" alt="Open Content"/></a></li>
-      </ul>
     </div>
     
     <div class="tertiary">
