--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div>
     <div class="primary">
-      <a href="https://uchicago.edu/" rel="external"><img src="{{ "/img/uchicago_logo_grey.jpg" | prepend: site.baseurl }}" width="123" height="32" alt="Open Knowledge"></a>
+      <a href="https://uchicago.edu/" rel="external"><img src="{{ "/img/uchicago_logo_grey.jpg" | prepend: site.baseurl }}" width="123" height="32" alt="University of Chicago"></a>
       
       {% if site.supporters %}
       <div class="supporters">
