--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
     </li>
     
     <li {% if url_last ==  'user-stories' %}class="Selected"{% endif %}>
-      <a href="{{ site.baseurl }}/user-stories/">User Stories</a>
+      <a href="{{ site.baseurl }}/user-stories/">User Stories and Case Studies</a>
     </li>
 
     <li {% if url_parts contains 'data' %}class="Selected"{% endif %}>
@@ -47,10 +47,6 @@
     
     <li {% if url_last ==  'partners' %}class="Selected"{% endif %}>
       <a href="{{ site.baseurl }}/partners/">Partners</a>
-    </li>
-    
-    <li {% if url_last ==  'case-studies' %}class="Selected"{% endif %}>
-      <a href="{{ site.baseurl }}/case-studies/">Case Studies</a>
     </li>
     
     <li>
