Refactor case study authors so we can include WDQC as one less confusingly

--- a/_layouts/case_study.html
+++ b/_layouts/case_study.html
@@ -15,7 +15,7 @@ wide: true
     <h1 class="post-title">{{ page.title }}</h1>
 
     {% if page.authors %}
-    <div class="author">An Interview with
+    <div class="author">
       <ul>
       {% for author in page.authors %}
         <li>{{ author }}</li>
