--- a/css/main.scss
+++ b/css/main.scss
@@ -328,7 +328,7 @@ pre,
           }
           
           &:last-child:after {
-            content:'.';
+            content:'';
           }
         }
       }
