--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -21,7 +21,7 @@ $small-spacing: $base-spacing / 2;
 $base-z-index: 0;
 
 // Colors
-$base-accent-color: rgb(255,108,0);
+$base-accent-color: #800000;
 $dark-gray: #333;
 $medium-gray: #EDEDED;
 $light-gray: #FAFAFA;
