Add blog link [Resolves #28]

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,12 @@
     </li>
     
     <li>
+      <a href="http://medium.com/data-at-work/">
+        Blog
+      </a>
+    </li>
+
+    <li>
       <a href="{{ site.baseurl }}/about/">About</a>
     </li>
     
