Add section on skills-ml, sunset get involved page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,8 +35,8 @@
       <a href="{{ site.baseurl }}/data-packages/">Training Provider Data Packages</a>
     </li>
     
-    <li {% if url_last ==  'tools' %}class="Selected"{% endif %}>
-      <a href="{{ site.baseurl }}/tools/">Tools</a>
+    <li {% if url_last ==  'skills-ml' %}class="Selected"{% endif %}>
+      <a href="{{ site.baseurl }}/skills-ml/">Skills-ML</a>
     </li>
     
     <li {% if url_last ==  'roadmap' %}class="Selected"{% endif %}>
